<resources>
    <string name="app_name">CU Soc Manager</string>
    <string name="google_sheet_API_key">AIzaSyCDR4wC8ViG4KhFtL4gImZNX58URtJ1zTA</string>
    <string name="member_list_sheet_id">18LYcI3_Z9lr4N4ZKWXVpy-76ZtxBFwX6p6_E9QYv360</string>
    <string name="news_list_sheet_id">1oaUtVtP--NdDh3dMQ_YQFZcAy1IRxuXnpxpi1qrHJmU</string>
    <string name="feedback_list_sheet_id">1hMZ1WEz7wcWrZ02tgDae7wX5XMDDxBbfdFEibsRtzXo</string>

    <string name="preference_file_key">csci3310gp10.cusocmanager.APP_INTERNAL_FILE</string>
    <string name="preference_user_has_login">hasLogin</string>

    <string name="confirm_remove">Remove Confirmation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="news_fragment">NewsFragment</string>
    <string name="news_detail_fragment">NewsDetailFragment</string>
    <string name="news_edit_fragment">NewsEditFragment</string>
    <string name="event_fragment">EventFragment</string>
    <string name="event_detail_fragment">EventDetailFragment</string>
    <string name="feedback_fragment">FeedbackFragment</string>
    <string name="login_fragment">LoginFragment</string>
    <string name="member_list_fragment">MemberListFragment</string>
    <string name="member_detail_fragment">MemberDetailFragment</string>
    <string name="feedback_list_fragment">FeedbackListFragment</string>
    <string name="feedback_detail_fragment">FeedbackDetailFragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit_member">Edit Info</string>
    <string name="action_delete_member">Remove Member</string>
    <string name="action_save_member">Update Info</string>
    <string name="action_edit_news">Edit Details</string>
    <string name="action_delete_news">Remove News</string>

    <string name="nav_title_news">News</string>
    <string name="nav_title_events">Apply Event</string>
    <string name="nav_title_feedback">Feedback</string>
    <string name="nav_section_manage">Manage</string>
    <string name="nav_title_login">Login</string>
    <string name="nav_title_logout">Logout</string>
    <string name="nav_title_member_list">View Member List</string>
    <string name="nav_title_view_feedback">View Feedback</string>

    <string name="login_label_username">Username:</string>
    <string name="login_label_password">Password:</string>
    <string name="login_hint_username">Name</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_label">LOGIN</string>

    <string name="feedback_title">Leave us comment</string>
    <string name="feedback_send_button_label">SEND</string>

    <string name="header_username_default">Japanese Culture Society</string>
    <string name="header_email_default">Guest</string>
    <string name="header_username_jpsoc">Japanese Culture Society</string>
    <string name="header_email_jpsoc">Committee</string>


</resources>
