<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="csci3310gp10.cusocmanager.LoginFragment">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:text="@string/login_label_username"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/login_label_password"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:layout_below="@+id/usernameTextView"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_hint_username"
        android:inputType="textPersonName"
        android:layout_toEndOf="@+id/usernameTextView"
        android:layout_alignBaseline="@+id/usernameTextView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:layout_toEndOf="@+id/passwordTextView"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/login_button_label"
        android:textColor="#fff"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/passwordTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
